[tool.poetry]
name = "pysearcher"
version = "0.1.0"
description = "something something"
authors = ["Sammightyt <ksaisamhith@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
repltalk = "^0.8.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
